--- a/DailyPurrgress/Resources/Localizable.xcstrings
+++ b/DailyPurrgress/Resources/Localizable.xcstrings
@@ -151,7 +151,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "example: 🥩"
+            "value" : "example: 🧘"
           }
         }
       }
@@ -173,7 +173,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "example: 140"
+            "value" : "example: 3"
           }
         }
       }
@@ -195,7 +195,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "example: Protein"
+            "value" : "example: Meditation"
           }
         }
       }
@@ -217,7 +217,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "example: 20"
+            "value" : "example: 1"
           }
         }
       }
@@ -239,7 +239,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "example: g"
+            "value" : "example: rest"
           }
         }
       }
@@ -267,12 +267,12 @@
       }
     },
     "catTier.complete.emoji" : {
-      "comment" : "Jaguar emoji complete tier",
+      "comment" : "Lion emoji complete tier",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "🐆"
+            "value" : "🦁"
           }
         }
       }
@@ -282,7 +282,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Small habits add up."
+            "value" : "One more day of progress."
           }
         }
       }
@@ -292,18 +292,18 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Well done."
+            "value" : "Daily goal complete."
           }
         }
       }
     },
     "catTier.high.emoji" : {
-      "comment" : "Cat emoji high tier",
+      "comment" : "Jaguar emoji high tier",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "🐈"
+            "value" : "🐆"
           }
         }
       }
@@ -313,7 +313,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Consistency is quietly building."
+            "value" : "Results come from repetition."
           }
         }
       }
@@ -323,7 +323,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "This feels good."
+            "value" : "Stay consistent."
           }
         }
       }
@@ -344,7 +344,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Every habit begins somewhere."
+            "value" : "Every small step moves you forward."
           }
         }
       }
@@ -354,18 +354,18 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "It’s okay to start small."
+            "value" : "Let’s begin."
           }
         }
       }
     },
     "catTier.medium.emoji" : {
-      "comment" : "Happy cat emoji medium tier",
+      "comment" : "Cat emoji medium tier",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "😸"
+            "value" : "🐈‍⬛"
           }
         }
       }
@@ -375,7 +375,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "You’re taking care of yourself."
+            "value" : "Momentum is building."
           }
         }
       }
@@ -385,7 +385,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Nice and steady."
+            "value" : "You’ve started."
           }
         }
       }
@@ -419,18 +419,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Cancel"
-          }
-        }
-      }
-    },
-    "common.action.delete" : {
-      "comment" : "Enter delete mode button title",
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Delete"
           }
         }
       }
@@ -627,18 +615,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Your habits"
-          }
-        }
-      }
-    },
-    "editHabitsSheet.title" : {
-      "comment" : "Edit habits sheet navigation title",
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Edit habits"
           }
         }
       }
